# dp-flights-backend

./: Cargo.toml
sql/: 1_create_prices_table.sql  2_create_seats_table.sql  find_flights.sql  scratchpad.sql
src/: app_state.rs  booking.rs  check_in.rs  config.rs  find_flights.rs  handlers.rs  main.rs  neighbours.rs  prices.rs  seats.rs  types.rs
test/: dp-flignts-backend.json
